--- a/ClusterKit.Monitoring/ClusterKit.Monitoring/packages.config
+++ b/ClusterKit.Monitoring/ClusterKit.Monitoring/packages.config
@@ -8,10 +8,10 @@
   <package id="Akka.Remote" version="1.0.6" targetFramework="net45" />
   <package id="Castle.Core" version="3.3.3" targetFramework="net46" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net46" />
-  <package id="ClusterKit.Core" version="0.0.0.61-master" targetFramework="net45" />
-  <package id="ClusterKit.Web" version="0.0.0.61-master" targetFramework="net45" />
-  <package id="ClusterKit.Web.Client" version="0.0.0.61-master" targetFramework="net45" />
-  <package id="ClusterKit.Web.SignalR" version="0.0.0.59-master" targetFramework="net45" />
+  <package id="ClusterKit.Core" version="0.0.0.68-master" targetFramework="net45" />
+  <package id="ClusterKit.Web" version="0.0.0.68-master" targetFramework="net45" />
+  <package id="ClusterKit.Web.Client" version="0.0.0.68-master" targetFramework="net45" />
+  <package id="ClusterKit.Web.SignalR" version="0.0.0.68-master" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
   <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net46" />
   <package id="Helios" version="1.4.2" targetFramework="net45" />
@@ -24,6 +24,7 @@
   <package id="Microsoft.AspNet.SignalR.Utils" version="2.2.0" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net46" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.OwinSelfHost" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net46" />
@@ -36,11 +37,8 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net46" />
-  <package id="Rx-Core" version="2.3.0-beta2" targetFramework="net46" requireReinstallation="true" />
   <package id="Rx-Interfaces" version="2.3.0-beta2" targetFramework="net46" requireReinstallation="true" />
-  <package id="Rx-Linq" version="2.3.0-beta2" targetFramework="net46" requireReinstallation="true" />
   <package id="Serilog" version="1.5.14" targetFramework="net45" />
-  <package id="StackExchange.Redis" version="1.1.572-alpha" targetFramework="net45" />
   <package id="System.Collections" version="4.0.0" targetFramework="net45" />
   <package id="System.Collections.Immutable" version="1.1.37" targetFramework="net45" />
   <package id="System.Diagnostics.Debug" version="4.0.0" targetFramework="net45" />
