--- a/ClusterKit.Core/ClusterKit.Core.TestKit/ClusterKit.Core.TestKit.csproj
+++ b/ClusterKit.Core/ClusterKit.Core.TestKit/ClusterKit.Core.TestKit.csproj
@@ -43,6 +43,10 @@
       <HintPath>..\..\packages\Akka.Cluster.1.0.6.17-beta\lib\net45\Akka.Cluster.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Akka.Cluster.Tools">
+      <HintPath>..\..\packages\Akka.Cluster.Tools.1.0.6\lib\net45\Akka.Cluster.Tools.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Akka.DI.CastleWindsor, Version=1.0.6.16, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\Akka.DI.CastleWindsor.1.0.6\lib\net45\Akka.DI.CastleWindsor.dll</HintPath>
