--- a/ClusterKit.Core/ClusterKit.Core/packages.config
+++ b/ClusterKit.Core/ClusterKit.Core/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Akka" version="1.0.6" targetFramework="net45" />
   <package id="Akka.Cluster" version="1.0.6.17-beta" targetFramework="net45" />
+  <package id="Akka.Cluster.Tools" version="1.0.6" targetFramework="net45" />
   <package id="Akka.DI.CastleWindsor" version="1.0.6" targetFramework="net45" />
   <package id="Akka.DI.Core" version="1.0.6" targetFramework="net45" />
   <package id="Akka.Logger.Serilog" version="1.0.6" targetFramework="net45" />
